@@ -123,5 +123,5 @@ constexpr auto CHEATS_GIVE_GUESTS_MONEY = 1000.00_GBP;
 
 void CheatsReset();
 const char* CheatsGetName(CheatType cheatType);
-void CheatsSet(CheatType cheatType, int32_t param1 = 0, int32_t param2 = 0);
+void CheatsSet(CheatType cheatType, int64_t param1 = 0, int64_t param2 = 0);
 void CheatsSerialise(class DataSerialiser& ds);
